2014-May-08 tomy        Tag V08-00-06.  Add BldDataGMDV2
2014-Apr-03 cpo         Tag V08-00-02.  Add 64-bit time accessors for psana indexing.
2014-Mar-26 cpo		Tag V08-00-01.  Workaround for what I believe is a compiler bug when compiling
                                        indexing with x86_64-opt (works with x86_64-dbg).
2014-Mar-26 cpo		Tag V07-02-23.  Add const accessor methods to index to
                                        allow for psana-indexing.
2014-Jan-07 salnikov	Tag V07-02-15.  Derived from psddldata tag V01-00-01 and psddl V00-13-02.
                                        Changed storage type for enum in Acqiris::TdcChannel class, interface did not change.
2013-Dec-22 salnikov	Tag V07-02-14.  Derived from psddldata tag V01-00-00 and psddl V00-13-00.
                                        Switching from XML-DDL to new DDL, psddl/package.mk updated, generated code should be identical except for formatting.  
2013-Dec-22 salnikov	Tag V07-02-13.  Derived from psddldata tag V00-04-57 and psddl V00-12-14.  
                                        Method Acqiris::TdcDataV1::data() now requires an argument which defines the size of the returned array.
2013-Dec-12 salnikov	Tag V07-02-11.  Derived from psddldata tag V00-04-55 and psddl V00-12-09.  Fixing bug in DDL definition of Ipimb::ConfigV1::capacitorValues(),
                                        Small changes in Andor config class to support HDF5 schema. Removed unnecessary methods from couple of EVR classes.  
2013-Dec-12 salnikov	Tag V07-02-10.  Derived from psddldata tag V00-04-53 and psddl V00-12-09.  Generating implementation of EpixSampler::ConfigV1::sampleInterval_sec().
2013-Nov-12 salnikov	Tag V07-02-07.  Derived from psddldata tag V00-04-47 and psddl V00-12-04.  Added capacitorValues method to ipimb Config types.
2013-Sep-20 weaver	Tag V07-00-03.  Derived from psddldata tag V00-04-37 and psddl V00-08-14.  Added BldAcqADCV1 and TimePix::DataV2(DataV1&) ctor.